--- a/components/PackPit/PackPit.module.css
+++ b/components/PackPit/PackPit.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   /* a touch taller than the viewport so there is a small scroll to the pile;
      about 50px of scroll regardless of viewport height */
-  height: calc(100vh + 50px);
+  height: 100vh;
   height: calc(100svh + 50px);
   min-height: 780px;
   overflow: hidden;
